--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -23,6 +23,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #333;
+  color: white;
 }
 
 .footer img {
