--- a/styles/Characters.module.css
+++ b/styles/Characters.module.css
@@ -73,16 +73,15 @@
 
 .grid {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: "row";
+  margin-top: 3rem;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
